--- a/personal.html
+++ b/personal.html
@@ -26,7 +26,7 @@
   <div class="back"> 
    <div class="child1">
      <h1>ahmed reda alsahed ahmed</h1> 
-     <p>iam a software engineer experience 3 years in tha field of front end developer i adore my work and i will develop my self this site has been done using HTML and CSS only and this explains part of my talent</p>
+     <p>I am a software engineer with 4 years experience in the field of full stack developer.</p>
      <h3>I know : <span class="type"></span></h3> 
      <a href="#about" class="smoothScroll"><i class="fa fa-angle-double-down fa-2x"></i></a>
    </div>   
@@ -80,7 +80,8 @@
   About Me
   </h2>
   <hr>
-  <p>my name is ahmed reda alsahed my age is 21 years ago iam from domyate graduate collage computers and information  the university of zagazig i study the programming and salued out with his great experience in the field of front end and his little experience in the field of back end fast learning durable ideal i and the last is a learning  , developement creativity and customer satisfaction i have a touch in design .</p>   
+  <p>I am a software engineer with 4 years of experience in the full stack developer field. I love my work and I always improve myself and my level. I dedicate a large part of my time to learning and learning more. I am always looking forward to the field I know that most companies often do not accept or doubt the person who works as a full developer because they think that he does not have enough experience in any of the field, but I say that I am more dedicated to the job of a back end developer and I love it more, but I have a good level in the field Front end of the domain see it from my work
+.</p>   
 </header> 
 <div class="row">
   <div class="img-profile col-lg-4 col-md-12"></div>  
@@ -103,7 +104,7 @@
          <li><span>age:</span> 21 years ago</li>  
          <li><span>collage:</span> zagazig university</li>  
          <li><span>language:</span> arabic , english</li>  
-         <li><span>experianc : </span>3 years</li>  
+         <li><span>experianc : </span>4 years</li>  
        </ul>   
       </div>
      </div> 
@@ -118,49 +119,40 @@
    <header>
     <h2>Facts</h2>   
     <hr>
-    <p>iam doing alot of project in last 3 yeare and using my knolage like html css js and another skells and this is information about my work like numper of clints and numper of projects numper of hours  </p>   
+    <p>I have worked on more than one project for more than one client using my knowledge in both the full stack developer field</p>   
    </header> 
    <div class="row">
-    <div class="col-md-6 col-lg-3 ">
+    <div class="col-md-6 col-lg-4 ">
       <div class="flexes">
         <i class="fa fa-smile-o fa-3x"></i>  
         <div class="info">
-         <span class="counter">200</span> 
+         <span class="counter">30</span> 
          <h5>Happy Clients</h5>
          <p>consequuntur quae</p>  
         </div>
       </div>  
     </div>  
-   <div class="col-md-6 col-lg-3 ">
+   <div class="col-md-6 col-lg-4">
       <div class="flexes">
-        <i class="fa fa-ambulance fa-3x"></i>  
+        <i class="fa fa-handshake-o fa-3x"></i>  
         <div class="info">
-         <span class="counter">33</span> 
+         <span class="counter">27</span> 
          <h5>Projects </h5>
          <p>consequuntur quae</p>  
         </div>
       </div>  
     </div>    
-     <div class="col-md-6 col-lg-3 ">
+     <div class="col-md-6 col-lg-4 ">
       <div class="flexes">
-        <i class="fa fa-file-text  fa-3x"></i>  
+        <i class="fa fa-clock-o  fa-3x"></i>  
         <div class="info">
-         <span class="counter">12</span> 
+         <span class="counter">11</span> 
          <h5>Hours Of day</h5>
          <p>avarage in day</p>  
         </div>
       </div>  
     </div>   
-  <div class="col-md-6 col-lg-3 ">
-      <div class="flexes">
-        <i class="fa fa-users fa-3x"></i>  
-        <div class="info">
-         <span class="counter">6</span> 
-         <h5>Hard Workers</h5>
-         <p>consequuntur quae</p>  
-        </div>
-      </div>  
-    </div>   
+
    </div>
 </section>
 <!-- =============================== end thered part of wep sit (Facts) =================================== -->
@@ -169,32 +161,32 @@
 <section class="skils">
  <header>
   <h2 class="h1">Skills</h2>
-  <p>i have alot of skils in front end developer and back end developer like html , html5 , css3 , css , js , js dom , js bom , es6 , vue js , sass , ajax , jason , node js , mysql , basic in laravel , postgres , nest js </p>   
+  <p>i have alot of skils in full stack developer developer like html , html5 , css3 , css , js , js dom , js bom , es6 , vue js , sass , ajax , jason , node js , mysql , basic in laravel , postgres , nest js </p>   
  </header>
  <div class="row">
   <div class="col-lg-6 col-md-12">
     <div class="progres">
       <ul class="list-unstyled">
-       <li class="HTML"><div>HTML<span>95%</span></div></li>   
-       <li class="HTML5"><div>HTML5<span>95%</span></div></li>   
-       <li class="CSS"><div>CSS<span>93%</span></div></li>   
-       <li class="CSS3"><div>CSS3<span>93%</span></div></li>   
-       <li class="javascripr"><div>javascript<span>75%</span></div></li>   
-       <li class="js_bom"><div>js bom<span>85%</span></div></li>   
-       <li class="js_dom"><div>js dom<span>80%</span></div></li>    
-       <li class="es6"><div>es6<span>75%</span></div></li>    
+       <li class="HTML"><div>HTML<span>80%</span></div></li>   
+       <li class="HTML5"><div>HTML5<span>80%</span></div></li>   
+       <li class="CSS"><div>CSS<span>80%</span></div></li>   
+       <li class="CSS3"><div>CSS3<span>80%</span></div></li>   
+       <li class="javascripr"><div>javascript<span>70%</span></div></li>   
+       <li class="js_bom"><div>js bom<span>70%</span></div></li>   
+       <li class="js_dom"><div>js dom<span>70%</span></div></li>    
+       <li class="es6"><div>es6<span>70%</span></div></li>    
       </ul>  
     </div>  
   </div> 
   <div class="col-lg-6 col-md-12">
     <div class="progres">
       <ul class="list-unstyled">
-       <li class="vue_js"><div>vue js<span>80%</span></div></li>   
-       <li class="sass"><div>sass<span>86%</span></div></li>   
+       <li class="vue_js"><div>vue js<span>60%</span></div></li>   
+       <li class="sass"><div>sass<span>65%</span></div></li>   
        <li class="ajax"><div>ajax<span>80%</span></div></li>   
        <li class="json"><div>json<span>80%</span></div></li>   
-       <li class="php" ><div>node js<span>70%</span></div></li>   
-       <li class="mysql"><div>mysql<span>80%</span></div></li>   
+       <li class="node_js" ><div>node js<span>70%</span></div></li>   
+       <li class="mysql"><div>mysql<span>70%</span></div></li>   
        <li class="postgres"><div>postgres<span>80%</span></div></li>   
        <li class="postgres"><div>express<span>80%</span></div></li>   
        <li class="NEST"><div>nest js<span>60%</span></div></li>   
@@ -221,8 +213,9 @@
             <p>i studied at the collage of computers and information 4 years i learned many of the programming language , which were characterized in some of them used in some areas i learned a lot of knowladge and skills</p> 
             <ul class="list-unstyled">
                <li>zagazig university </li> 
-               <li>IT filed</li> 
-               <li>front end developer / basik of back end developer</li>
+               <li>IS filed</li> 
+               <li>full stack developer developer</li>
+               <li>A good grade</li>
             </ul>
           </div>  
           <h2 class="h1">Personal skills</h2>
@@ -245,7 +238,7 @@
          <h6>linked in / git hub / خمسات / مستقل</h6>   
          <ul class="list-unstyled">
              <li></li>
-             <li>I own a GitHub link, but I have no guarantee of my work from being stolen from any outside person. I will not raise it because I recently published my resume, but if you want it, contact me.</li>
+             <li>https://github.com/AHMED168-ENG , i have some project private</li>
              <li>https://mostaql.com/</li>
              <li></li>
 
@@ -257,7 +250,8 @@
             <li>BOOTSTRAB / SASS</li>
             <li>JS / JS DOM / JS BOM / ES6 / VUE JS</li>  
             <li>AJAX / JASN </li>
-            <li>PHP NATIVE / MYSQL / BASIQ OF LARAVEL</li>
+            <li>node js / MYSQL / postgres / BASIQ OF nest js </li>
+            <li> express / sockit io / BASIQ OF graphq ul / heroku</li>
           </ul>
          </div>
         </div>
@@ -292,7 +286,14 @@
             <li><a target="_blank" href="https://ahmed168-eng.github.io/Bethany-websit/Bethany.html">https://ahmed168-eng.github.io/Bethany-websit/Bethany.html</a></li>
             <li><a target="_blank" href="https://ahmed168-eng.github.io/simple-wep-design/wep-design.html">https://ahmed168-eng.github.io/simple-wep-design/wep-design.html</a></li>
             <li><a target="_blank" href="https://ahmed168-eng.github.io/elzero-project-simple/elzero.html">https://ahmed168-eng.github.io/elzero-project-simple/elzero.html</a></li>
-
+          </ul>
+          <h3>back end</h3>
+          <ul>
+            <li><a href="https://github.com/AHMED168-ENG/ESO"> https://github.com/AHMED168-ENG/ESO</a></li>
+            <li><a href="https://github.com/AHMED168-ENG/hospita123project"> https://github.com/AHMED168-ENG/hospita123project</a></li>
+            <li><a href="https://github.com/AHMED168-ENG/sherif_shehap_galary"> https://github.com/AHMED168-ENG/sherif_shehap_galary</a></li>
+            <li><a href="https://github.com/AHMED168-ENG/childProject"> https://github.com/AHMED168-ENG/childProject</a></li>
+            <li>This is not all projects </li>
           </ul>
         </div>
       </div>
@@ -306,7 +307,7 @@
  <header>
    <h2 class="h1">Portfolio</h2>  
    <hr>
-   <p>i have much of projects in all fildes like personal sit , food sit , ecimmerc sit , show sit for education , and more and more about fildes of projectes this project done using HTML and CSS only if you wont to see projects with js and vue you will found links in the end of this sit .</p> 
+   <p>i have much of projects in all fildes like personal sit , food sit , ecimmerc sit , show sit for education , and more and more about fildes of projectes this project done using HTML and CSS only if you wont to see projects with js and vue you will found links upstairs. but about back end project you will show it on git hup</p> 
  </header>   
  <ul class="list-unstyled text-center">
    <li class="filter" data-filter="all">all</li>   
@@ -446,7 +447,7 @@
    <header>
     <h2 class="h1">Services</h2>
     <hr>
-    <p>i can provide you with my many services and many services in front end developer , such as working , and fast performance and fast delivery and tangling colors and very suitable price for the customar .</p>
+    <p>i can provide you with my many services and many services in full stack developer developer , such as working , and fast performance and fast delivery and tangling colors and very suitable price for the customar .</p>
    </header>
    <div class="row text-center">
        <div class="col-lg-4 col-md-6">
@@ -510,7 +511,7 @@
 <!-- =============================== end seven part Services wep sit =================================== -->
 
 <!-- =============================== start eagt part Testimonials wep sit =================================== -->
-<section class="Testimonials">
+<!-- <section class="Testimonials">
  <header>
      <h2 class="h1">Testimonials</h2>
      <hr>
@@ -566,7 +567,7 @@
        <span>wep developer</span>
    </div>  
  </div>  
- </section>
+ </section> -->
 <!-- =============================== end eagt part Testimonials wep sit =================================== -->
 
 <!-- =============================== start nigne part Contact wep sit =================================== -->
