--- a/personal.html
+++ b/personal.html
@@ -80,7 +80,7 @@
   About Me
   </h2>
   <hr>
-  <p>I am a software engineer with 4 years of experience in the full stack developer field. I love my work and I always improve myself and my level. I dedicate a large part of my time to learning and learning more. I am always looking forward to the field I know that most companies often do not accept or doubt the person who works as a full developer because they think that he does not have enough experience in any of the field, but I say that I am more dedicated to the job of a back end developer and I love it more, but I have a good level in the field Front end of the domain see it from my work
+  <p>I am a software engineer with 4 years of experience in the full stack developer field. I love my work and I always improve myself and my level. I dedicate a large part of my time to learning and learning more. I am always looking forward to the field I know that most companies often do not accept or doubt the person who works as a full developer because they think that he does not have enough experience in any of the field, but I say that I am more love to the job of a back end developer and I love it more, but I have a good level in the field Front end of the domain see it from my work
 .</p>   
 </header> 
 <div class="row">
@@ -307,7 +307,7 @@
  <header>
    <h2 class="h1">Portfolio</h2>  
    <hr>
-   <p>i have much of projects in all fildes like personal sit , food sit , ecimmerc sit , show sit for education , and more and more about fildes of projectes this project done using HTML and CSS only if you wont to see projects with js and vue you will found links upstairs. but about back end project you will show it on git hup</p> 
+   <p>i have much of projects in all fildes like personal sit , food sit , ecimmerc sit , show sit for education , hospitals , and more and more about fildes of projectes </p> 
  </header>   
  <ul class="list-unstyled text-center">
    <li class="filter" data-filter="all">all</li>   
