--- a/personal.html
+++ b/personal.html
@@ -45,7 +45,7 @@
         <div class="back5"></div> 
         <img src="img/profile-img.jpg">
       </div>
-      <h4 class="our-head">Alex Smith</h4>
+      <h4 class="our-head">Ahmed Reda Al-Saeed Ahmed</h4>
         <i class="fa fa-linkedin"></i>  
         <i class="fa fa-facebook"></i>  
         <i class="fa fa-twitter"></i>  
