--- a/personal.html
+++ b/personal.html
@@ -46,11 +46,8 @@
         <img src="img/profile-img.jpg">
       </div>
       <h4 class="our-head">Ahmed Reda Al-Saeed Ahmed</h4>
-        <i class="fa fa-linkedin"></i>  
-        <i class="fa fa-facebook"></i>  
-        <i class="fa fa-twitter"></i>  
-        <i class="fa fa-instagram"></i>  
-        <i class="fa fa-linkedin"></i> 
+        <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>  
+         
     </div>
     <div class="center">
       <ul class="list-unstyled">
@@ -238,7 +235,7 @@
          <h6>linked in / git hub / خمسات / مستقل</h6>   
          <ul class="list-unstyled">
              <li></li>
-             <li>https://github.com/AHMED168-ENG , i have some project private</li>
+             <li>https://github.com/AHMED168-ENG </li>
              <li>https://mostaql.com/</li>
              <li></li>
 
