--- a/personal.html
+++ b/personal.html
@@ -99,7 +99,7 @@
       <div class="left-coulam col-md-6">
        <ul class="list-unstyled">
          <li><span>age:</span> 21 years ago</li>  
-         <li><span>collage:</span> zagazig university</li>  
+         <li><span>ZAGAZIG university:</span> zagazig university</li>  
          <li><span>language:</span> arabic , english</li>  
          <li><span>experianc : </span>4 years</li>  
        </ul>   
@@ -172,6 +172,8 @@
        <li class="js_bom"><div>js bom<span>70%</span></div></li>   
        <li class="js_dom"><div>js dom<span>70%</span></div></li>    
        <li class="es6"><div>es6<span>70%</span></div></li>    
+       <li class="graphql"><div>graphql<span>50%</span></div></li>    
+       <li class="type"><div>type script<span>60%</span></div></li>    
       </ul>  
     </div>  
   </div> 
@@ -287,7 +289,14 @@
           <h3>back end</h3>
           <ul>
             <li><a href="https://github.com/AHMED168-ENG/ESO"> https://github.com/AHMED168-ENG/ESO</a></li>
-            <li><a href="https://github.com/AHMED168-ENG/hospita123project"> https://github.com/AHMED168-ENG/hospita123project</a></li>
+            <li><a href="https://github.com/AHMED168-ENG/hospita123project"> https://github.com/AHMED168-ENG/hospita123project</a>
+              <ul>
+                <li>يمكنك الدخول علي الموقع من خلال الايميل و الباسورد</li>
+                <li>email user : ahmed@ahmed.com</li>
+                <li>email doctor : doc10@doc10.com</li>
+                <li>password : 01024756410ahmed</li>
+              </ul>
+            </li>
             <li><a href="https://github.com/AHMED168-ENG/sherif_shehap_galary"> https://github.com/AHMED168-ENG/sherif_shehap_galary</a></li>
             <li><a href="https://github.com/AHMED168-ENG/childProject"> https://github.com/AHMED168-ENG/childProject</a></li>
             <li>This is not all projects </li>
