--- a/personal.html
+++ b/personal.html
@@ -43,7 +43,7 @@
       <div class="up text-center"> 
       <div class="img">
         <div class="back5"></div> 
-        <img src="img/profile-img.jpg">
+        <img src="img/myPc.jpg" style="">
       </div>
       <h4 class="our-head">Ahmed Reda Al-Saeed Ahmed</h4>
         <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>  
